--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_gravity="center"
+        android:visibility="gone"
         tools:src="@mipmap/ic_launcher" />
 
     <TextView
@@ -22,13 +23,15 @@
         android:layout_marginTop="10dp"
         android:textColor="#f20"
         android:textSize="30sp"
+        android:visibility="gone"
         tools:text="10%" />
 
     <ProgressBar
         android:id="@+id/progressbar"
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="match_parent"
-        android:layout_height="30dp" />
+        android:layout_height="30dp"
+        android:visibility="gone" />
 
     <Button
         android:id="@+id/buttonDownLoad"
